--- a/package.json
+++ b/package.json
@@ -17,28 +17,29 @@
   },
   "main": "background.js",
   "dependencies": {
+    "@vue/compat": "^3.1",
     "axios": "^0.21.1",
     "better-sqlite3": "^7.4.2",
     "core-js": "^3.14.0",
     "cors": "^2.8.5",
     "electron-updater": "^4.3.9",
-    "glasstron": "^0.1.0",
     "mime-types": "^2.1.31",
     "music-metadata": "^7.8.6",
     "node-vibrant": "^3.1.6",
     "sharp": "^0.29.3",
     "tmp": "^0.2.1",
-    "vue": "^2.6.14",
-    "vue-async-computed": "^3.9.0",
-    "vue-i18n": "^8.24.4",
-    "vue-router": "^3.5.1",
+    "vue": "^3.1",
+    "vue3-async-computed": "^3.0.0",
+    "vue-i18n": "^9.1.9",
+    "vue-router": "^4",
     "vue-virtual-scroll-list": "https://github.com/kawuchuu/vue-virtual-scroll-list",
-    "vuex": "^3.6.2"
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "@vue/compiler-sfc": "^3.2.31",
     "babel-eslint": "^10.1.0",
     "electron": "^16.0.0",
     "electron-devtools-installer": "^3.2.0",
@@ -46,8 +47,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.45.1",
     "sass-loader": "^10",
-    "vue-cli-plugin-electron-builder": "~2.0.0",
-    "vue-template-compiler": "^2.6.14"
+    "vue-cli-plugin-electron-builder": "~2.0.0"
   },
   "resolutions": {
     "electron-builder": "^22.11.7",
